kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: localbuild-app
  labels:
    name: localbuild-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    name: logging
